--- a/board.ui
+++ b/board.ui
@@ -29,9 +29,15 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Chess</string>
+   <string>对局</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="res.qrc">
+    <normaloff>:/image/hongzu.svg</normaloff>:/image/hongzu.svg</iconset>
   </property>
  </widget>
- <resources/>
+ <resources>
+  <include location="res.qrc"/>
+ </resources>
  <connections/>
 </ui>
